# MineCloneCpp

./: CMakeLists.txt
resources/: blocks.mcpy
resources/shaders/: test_fs.glsl  test_vs.glsl
src/: main.cpp
src/game/: game.cpp  game.h  window.cpp  window.h
src/game/models/: models.cpp  models.h
src/game/renderer/: camera.cpp  camera.h  gameobject.cpp  gameobject.h  shader.cpp  shader.h
src/game/utils/: nbt.h  texturemanager.cpp  texturemanager.h
src/game/world/: blocktype.cpp  blocktype.h  chunk.cpp  chunk.h  world.cpp  world.h
